--- a/apps/storefront/src/components/header/cart-button.module.scss
+++ b/apps/storefront/src/components/header/cart-button.module.scss
@@ -1,6 +1,6 @@
 @import 'globals';
 
-.container {
+body a.container {
     overflow: hidden;
     display: grid;
     grid-template-rows: 1fr;
@@ -15,6 +15,7 @@
     padding: var(--block-padding-small) 0;
 
     background-color: transparent;
+    color: var(--accent-secondary-text);
 
     font-size: 2.25rem;
     font-weight: 400;
@@ -22,8 +23,8 @@
     text-align: center;
 
     &,
-    & svg {
-        transition: $animation-duration ease-in-out;
+    svg {
+        transition: $animation-duration ease-in-out all;
     }
 
     .icon {
@@ -46,12 +47,14 @@
         font-size: 0.75em;
     }
 
-    &:is([data-items='0']):not(:disabled):is(:hover, :active) {
-        &,
-        svg {
-            color: var(--color-accent-primary);
-            fill: var(--color-accent-primary);
-            stroke: var(--color-accent-primary);
+    &:not(:disabled):is(:hover, :active, :focus) {
+        &:is([data-items='0']) {
+            &,
+            svg {
+                color: var(--color-accent-primary);
+                fill: var(--color-accent-primary);
+                stroke: var(--color-accent-primary);
+            }
         }
     }
 
@@ -67,39 +70,40 @@
         font-size: 2rem;
     }
 
-    &[data-items]:not([data-items='0'], :disabled) {
-        gap: calc(var(--block-spacer-small) / 2);
-        padding: var(--block-padding-small) calc(var(--block-padding) * 1.25);
-        background-color: var(--color-accent-primary);
-        color: var(--accent-primary-text);
+    &[data-items] {
         border-radius: 5rem;
 
-        transition: $animation-duration ease-in-out;
-
-        @media (min-width: $breakpoint-mobile) {
-            padding: var(--block-padding-small) var(--block-padding);
-        }
-
-        svg {
+        &:not([data-items='0'], :disabled) {
+            gap: calc(var(--block-spacer-small) / 2);
+            padding: var(--block-padding-small) calc(var(--block-padding) * 1.25);
+            background-color: var(--color-accent-primary);
             color: var(--accent-primary-text);
-            fill: var(--accent-primary-text);
-            stroke: var(--accent-primary-text);
-        }
 
-        .quantity {
-            font-weight: 500;
-            width: fit-content;
-            padding: 0.15rem 0 0 0.3rem;
-        }
+            @media (min-width: $breakpoint-mobile) {
+                padding: var(--block-padding-small) var(--block-padding);
+            }
 
-        &:is(:hover, :active) {
-            background-color: var(--color-bright);
-
-            &,
             svg {
-                color: var(--color-dark);
-                fill: var(--color-dark);
-                stroke: var(--color-dark);
+                color: var(--accent-primary-text);
+                fill: var(--accent-primary-text);
+                stroke: var(--accent-primary-text);
+            }
+
+            .quantity {
+                font-weight: 500;
+                width: fit-content;
+                padding: 0.15rem 0 0 0.3rem;
+            }
+
+            &:is(:hover, :active) {
+                background-color: var(--color-bright);
+
+                &,
+                svg {
+                    color: var(--color-dark);
+                    fill: var(--color-dark);
+                    stroke: var(--color-dark);
+                }
             }
         }
     }
