Storefront: Improve ProductQuantityBreaks component.
This is in preparation for actual support once we figure out how best
to handle multiple store instances and product/collection-specific
quantity breaks.

--- a/apps/storefront/src/components/products/product-quantity-breaks.module.scss
+++ b/apps/storefront/src/components/products/product-quantity-breaks.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: var(--block-spacer);
 
     &:empty {
@@ -27,7 +27,9 @@
         }
 
         &:is(.selected) {
-            background-color: var(--color-block);
+            background-color: var(--accent-primary);
+            border-color: var(--accent-primary-dark);
+            color: var(--accent-primary-text);
         }
 
         .percentage {
