--- a/apps/storefront/src/components/products/product-quantity-breaks.module.scss
+++ b/apps/storefront/src/components/products/product-quantity-breaks.module.scss
@@ -10,6 +10,7 @@
     }
 
     .item {
+        appearance: none;
         display: grid;
         grid-template-columns: 1fr auto;
         justify-content: center;
