Admin: Upgrade shopify-api and fix auth.
This should've been two commits, but fuck it. Way more important to get
this out than to dwell over such things atm.

--- a/apps/admin/src/app/(dashboard)/[id]/layout.module.scss
+++ b/apps/admin/src/app/(dashboard)/[id]/layout.module.scss
@@ -44,14 +44,11 @@
         width: 100%;
 
         &.collaborator {
-            display: flex;
+            display: grid;
+            grid-template-columns: auto 1fr;
             justify-content: center;
             align-items: center;
             min-width: 0;
-
-            & > div {
-                display: contents;
-            }
 
             .avatar {
                 display: flex;
