Storefront: Drastically improve quantity input.
The quantity input text field now scales with the width of the input,
e.g. it grows.

A bunch of unnecessary suspense boundaries have also been removed
simplifying the code and making it easier to read.

--- a/apps/storefront/src/components/products/product-actions-container.module.scss
+++ b/apps/storefront/src/components/products/product-actions-container.module.scss
@@ -10,7 +10,7 @@
         display: grid;
         grid-template-areas: 'quantity-label options' 'quantity options' '. options';
         grid-template-rows: 1.75rem 5rem 1fr;
-        grid-template-columns: minmax(18rem, auto) 1fr;
+        grid-template-columns: auto 1fr;
         gap: calc(var(--block-spacer-small) / 2) var(--block-spacer-large);
     }
 
