Storefront: Improve `<ProductCard/>` & `<IconGrid/>` designs.

--- a/apps/storefront/src/components/actionable/button.module.scss
+++ b/apps/storefront/src/components/actionable/button.module.scss
@@ -23,7 +23,7 @@
     background-color: var(--accent-primary);
     color: var(--accent-primary-text);
 
-    transition: $animation-duration ease-in-out all;
+    transition: #{$animation-duration} ease-in-out all;
     -webkit-user-select: none;
     user-select: none;
 
