--- a/apps/storefront/src/components/header/cart-button.module.scss
+++ b/apps/storefront/src/components/header/cart-button.module.scss
@@ -24,7 +24,7 @@ body a.container {
 
     &,
     svg {
-        transition: $animation-duration ease-in-out all;
+        transition: #{$animation-duration} ease-in-out all;
     }
 
     .icon {
