--- a/apps/storefront/src/slices/common/CollapsibleText/collapsible-text.module.scss
+++ b/apps/storefront/src/slices/common/CollapsibleText/collapsible-text.module.scss
@@ -31,7 +31,7 @@
             line-height: 2.5rem;
             font-weight: 700;
             cursor: pointer;
-            transition: $animation-duration all ease-in-out;
+            transition: #{$animation-duration} all ease-in-out;
             -webkit-user-select: none;
             user-select: none;
 
