--- a/apps/storefront/src/components/product-card/product-card.module.scss
+++ b/apps/storefront/src/components/product-card/product-card.module.scss
@@ -187,8 +187,8 @@
             cursor: pointer;
             opacity: 0.65;
             transition:
-                $animation-duration ease-in-out color,
-                $animation-duration ease-in-out background-color;
+                #{$animation-duration} ease-in-out color,
+                #{$animation-duration} ease-in-out background-color;
             border-radius: var(--block-border-radius);
 
             &[data-active='true'] {
@@ -224,9 +224,9 @@
         background-color: var(--color-bright);
 
         transition:
-            $animation-duration ease-in-out color,
-            $animation-duration ease-in-out background-color,
-            $animation-duration ease-in-out border-radius;
+            #{$animation-duration} ease-in-out color,
+            #{$animation-duration} ease-in-out background-color,
+            #{$animation-duration} ease-in-out border-radius;
         -webkit-user-select: none;
         user-select: none;
 
@@ -238,10 +238,10 @@
 
             cursor: pointer;
             transition:
-                $animation-duration ease-in-out color,
-                $animation-duration ease-in-out background-color,
-                $animation-duration ease-in-out border-radius,
-                $animation-duration ease-in-out width;
+                #{$animation-duration} ease-in-out color,
+                #{$animation-duration} ease-in-out background-color,
+                #{$animation-duration} ease-in-out border-radius,
+                #{$animation-duration} ease-in-out width;
 
             text-align: center;
             font-size: 1.85em;
