--- a/apps/storefront/src/components/cart/cart-line.module.scss
+++ b/apps/storefront/src/components/cart/cart-line.module.scss
@@ -162,6 +162,7 @@
         width: 100%;
 
         .quantity {
+            width: 100%;
             height: 3.5rem;
             max-height: 100%;
             margin-bottom: 0;
